--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
         </dependency>
+
+
+        <!-- Hibernate Core -->
+        <!-- Hibernate Core Relocation » 5.4.3.Final -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.3.Final</version>
+        </dependency>
+
+
     </dependencies>
+
+
 
 </project>
