--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootbeta
+spring.datasource.url=jdbc:mysql://localhost:3306/HealthCareDatabase
 spring.datasource.username=test
 spring.datasource.password=password123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,7 +17,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.error.include-message=always
 ## Server port
-server.port=8090
+server.port=8081
 
 ## Application name and context path
 #spring.application.name=UmarApp
