--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/HealthCareDatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/healthcaredbspring
 spring.datasource.username=test
 spring.datasource.password=password123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
