--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
         </dependency>
 
 
+<!--        for jsp page rendering-->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
@@ -64,6 +71,9 @@
             </plugin>
         </plugins>
     </build>
+
+
+
 
 
 
