--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 
 
-#spring.mvc.view.prefix=/WEB-INF/views/
-#spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
 
 
 server.error.include-message=always
